# mdmod

./: .gitattributes  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: qodana_code_quality.yml
internal/spec/: validate.go
internal/utils/: importer.go  loader.go
mdmod/: __init__.py  loader.py  requirements.txt
schema/: .mdmod.schema.json  .mdspec.schema.json  example.mdmod.yaml  example.mdspec.yaml
src/internal/utils/: model.go  validate.go
src/schema/: .mdspec.schema.json  example.mdspec.yaml  spec.mdspec.yaml
